split to NAudio class

--- a/YourMusicPlayer/YourMusicPlayer.csproj
+++ b/YourMusicPlayer/YourMusicPlayer.csproj
@@ -50,6 +50,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="NAudio.cs" />
     <Compile Include="Player.cs">
       <SubType>Form</SubType>
     </Compile>
